# boltra

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  boltra-doc.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md
crates/boltra-cli/: Cargo.toml
crates/boltra-cli/src/: lib.rs
crates/boltra-core/: Cargo.toml
crates/boltra-core/src/: lib.rs
doc/: README.md
doc/developer/: README.md  architecture.md  cli-architecture.md  dev-server.md  development-workflow.md  project-generator.md  project-structure.md  python-package.md  releasing.md  rust-native.md  tooling.md
doc/plan/: CHANGELOG.md  phase.md  rusjango-migration.md
doc/user/: README.md  cli.md  installation.md
src/boltra/: __init__.py  _native.pyi  native.py
src/boltra/cli/: __init__.py  dispatch.py  main.py  parser.py
src/boltra/dev/: __init__.py  config.py  server.py
src/boltra/project/: __init__.py  generator.py  templates.py
tests/: test_cli.py  test_dev.py  test_native.py  test_project.py
