[workspace]
members = ["crates/boltra-cli", "crates/boltra-core"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/babar-xagi/boltra"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }

# Release profile tuned for hot-path performance (ORM compiler, row decoder).
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
