[package]
name = "boltra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Clap-based CLI argument parser for Boltra"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
